fix firefox issues
- fix issue where change path button would not be visible
- fix issue where path would be cut off
- fix issues where some elements would be scrollable
- fix issue where lock and unlocked icon could both be visible
- fix issue where toggle buttons would not show text

--- a/client/assets/styles/scss/modals/modals-edit-dockerfile.scss
+++ b/client/assets/styles/scss/modals/modals-edit-dockerfile.scss
@@ -48,7 +48,7 @@
 
       .span {
         display: inline-block;
-        height: 18px;
+        height: 14px;
         max-width: 100%;
         position: relative;
         top: 3px;
